# ichnos

./: .gitignore  Cargo.toml  project.md  pyproject.toml
crates/robotics-catalog/: Cargo.toml
crates/robotics-catalog/src/: lib.rs
crates/robotics-cli/: Cargo.toml
crates/robotics-cli/src/: main.rs
crates/robotics-cli/tests/: demo.rs
crates/robotics-core/: Cargo.toml
crates/robotics-core/src/: lib.rs
crates/robotics-ingest/: Cargo.toml
crates/robotics-ingest/src/: lib.rs
crates/robotics-query/: Cargo.toml
crates/robotics-query/src/: lib.rs
crates/robotics-tensor/: Cargo.toml
crates/robotics-tensor/src/: lib.rs
docs/: dataset_adapters.md  pilot_runbook.md  real_data_dry_run_checklist.md
python/physicaldb/: __init__.py  adapters.py  onboarding.py  onboarding_cli.py  query.py
scripts/: bench_catalog_scale.py  demo_euroc_pose_imu_camera.py  demo_generic_customer_workflow.py  pilot_smoke.py  prove_euroc_hot_catalog.py  run_localstack_s3_smoke.py  smoke_camera_materialization.py  smoke_s3_pose_imu_media.py  validate_euroc_vicon_room1.py  validate_s3_large_ranges.py
tests/: test_physicaldb.py
