[workspace]
members = [
    "crates/robotics-core",
    "crates/robotics-catalog",
    "crates/robotics-query",
    "crates/robotics-tensor",
    "crates/robotics-ingest",
    "crates/robotics-cli",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.lints.rust]
unsafe_code = "forbid"

