[project]
name = "physicaldb"
version = "0.1.0"
description = "Python query facade for the robotics physical AI data prototype"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
torch = ["torch"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["python"]

[tool.pytest.ini_options]
pythonpath = ["python"]
