[package]
name = "robotics-catalog"
edition.workspace = true
license.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
arrow-array = "58.3.0"
arrow-schema = "58.3.0"
parquet = { version = "58.3.0", features = ["arrow"] }
robotics-core = { path = "../robotics-core" }

[dev-dependencies]
robotics-ingest = { path = "../robotics-ingest" }
