[package]
name = "robotics-ingest"
edition.workspace = true
license.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
arrow-array = "58.3.0"
arrow-schema = "58.3.0"
chrono = "0.4.44"
mcap = "0.24.0"
parquet = { version = "58.3.0", features = ["arrow"] }
robotics-core = { path = "../robotics-core" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
