[package]
name = "robotics-query"
edition.workspace = true
license.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
async-trait = "0.1.89"
arrow-array = "58.3.0"
bytes = "1.11.0"
futures = "0.3.31"
object_store = { version = "0.13.2", features = ["aws"] }
parquet = { version = "58.3.0", features = ["arrow", "object_store"] }
robotics-core = { path = "../robotics-core" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
url = "2.5.8"

[dev-dependencies]
robotics-catalog = { path = "../robotics-catalog" }
robotics-ingest = { path = "../robotics-ingest" }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros"] }
